# grox

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/tutorials/: mnist.ipynb
grox/: XDEs.py  __init__.py  denoisers.py  schedules.py  solvers.py  utils.py
grox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
grox/networks/: unet.py  unet2d.py
tests/: test_EulerMaruyama.py  test_Heun.py  test_unet.py  test_unet2d.py
